force-app/main/default/objects/GameQuestStepRound__c/GameQuestStepRound__c.object-meta.xml
<CustomObject>
    <label>Game Quest Step Round</label>
    <nameField>
        <displayFormat>GQSR-{000000}</displayFormat>
        <label>Game Quest Step Round Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Quest Step Rounds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>